<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/bck7">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/college"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginTop="40dp"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="80dp"
            android:paddingStart="30dp"
            android:text="@string/student"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="40dp"
            android:paddingStart="30dp"
            android:text="@string/student_number"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="40dp"
            android:paddingStart="30dp"
            android:text="@string/ramo"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="40dp"
            android:paddingStart="30dp"
            android:textColor="@color/white"
            android:text="@string/subject"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="40dp"
            android:paddingStart="30dp"
            android:text="@string/school_year"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F8EC05"
            android:textColor="@color/black"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="80dp"
            android:text="@string/back" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>