<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/activity_single">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/bck7"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:text="@string/official_app_name"
                android:textSize="20sp"
                android:textStyle="italic"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/games"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="@id/title">

            <LinearLayout
                android:layout_width="205dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView

                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/play_alone"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:id="@+id/btnSingle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#F8EC05"
                    android:text="@string/single_player"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView8"

                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="150dp"
                    android:layout_marginBottom="30dp"
                    android:textAlignment="center"
                    android:text="@string/play_friends"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:id="@+id/btnMultiCli"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#F8EC05"
                    android:textColor="@color/black"
                    android:text="@string/client_mode" />

                <Button
                    android:id="@+id/btnMultiServ"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#F8EC05"
                    android:text="@string/server_mode"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnCredits"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#F8EC05"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/black"
                    android:text="@string/credits" />

                <TextView
                    android:id="@+id/tvBestResults"
                    android:layout_width="match_parent"
                    android:layout_height="257dp"
                    android:text="@string/best_scores"
                    android:textAlignment="center"
                    android:layout_marginTop="50dp"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tvBestTimes"
                    android:layout_width="match_parent"
                    android:layout_height="277dp"
                    android:textSize="16dp"
                    android:text="@string/best_times"
                    android:textAlignment="center"
                    android:textColor="@color/white" />


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>