<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/bck7">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.tpamov.view.BoardView
                android:id="@+id/boardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
            <!--android:layout_marginLeft="80dp"
            android:layout_marginTop="60dp"/>-->

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAcertou"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="3dp"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:orientation="horizontal"
                tools:ignore="ExtraText">

                <TextView
                    android:id="@+id/tvScore"
                    android:layout_width="wrap_content"
                    android:layout_height="128dp"
                    android:layout_weight="1"
                    android:text="@string/points"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingEnd="5dp"
                    android:paddingTop="5dp"
                    android:paddingStart="5dp"
                    android:paddingBottom="5dp">


                    <Button
                        android:id="@+id/btnPlay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="#F8EC05"
                        android:paddingStart="00dp"
                        android:paddingEnd="0dp"
                        android:text="@string/play" />

                    <Button
                        android:id="@+id/btnPause"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="#FFF8EC05"
                        android:text="@string/pause" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTime"
                        android:layout_width="match_parent"
                        android:layout_height="75dp"
                        android:layout_weight="1"
                        android:text="@string/time"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:id="@+id/tvTimePlayed"
                        android:layout_width="match_parent"
                        android:layout_height="72dp"
                        android:layout_weight="1"
                        android:text="@string/time_played"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvJogada"
                    android:layout_width="151dp"
                    android:layout_height="match_parent"
                    android:text="@string/playResult"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvAnswer"
                    android:layout_width="95dp"
                    android:layout_height="match_parent"
                    android:text="@string/winningResult"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvSecondAnswer"
                    android:layout_width="165dp"
                    android:layout_height="match_parent"
                    android:text="@string/secondWinningResult"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>>


</androidx.constraintlayout.widget.ConstraintLayout>